--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
